  multiple records, unlike the selecthandler which selects one record.
  Send atktarget, atktargetvar and atktargetvartpl to the multiselectaction,
  where atktarget is the target url, atktargetvar is the variable in the 
  url which will be filled according to the selected records and 
  atktargetvartpl is the template which is used to fill the atktargetvar.
  [Lineke]
* Refactored some functionality from atkSecurityManager to the
  auth_interface class which allows for greater control from within
  authorization classes. [Peter]
* Fixed automatic enable/disable of recordlist checkboxes. [Peter,Martin]
* Record-level allowed check is now also being performed in the
  respective action handlers. [Peter]
* atkNode::redirect now has a parameter to immediately exit after the
  redirect. This can prevent weird side effects because the script would 
  normally continue to run after the redirect. [Peter]
* atkDb::selectDb/countDb don't set distinct on by default. In most
  cases this is not needed. And the cases which do need this can turn it
  on manually using an attribute which does so. [Peter]
* atkTestCase:: clear node repository etc. between each test method
  because test methods may *never* influence each other. [Peter]
* If there is not selection possible for an atkManyToOneAttribute
  show the none label. Even if obligatory. [Peter]
* Improved partial refresh support for attributes. Attributes can now
  refresh an arbitrary number of fields using JavaScript code. This
  is necessary for atkOneToOneRelations etc. [Peter]
* Owner instance is now set in attributes using setOwnerInstance. [Peter]
* Improved ATK test suite output. [Peter]
* Improved default Oracle date format. [Peter]
* When field.focus fails we catch the error so the user doesn't 
  see the error. [Dennis-Jan]
* Some code cleanup for the mysqli driver. [Martin]
* check constraint violations are now seen as user errors by the
  Mysqli driver. [Martin]