@@ -57,6 +57,12 @@
           $page->addContent($result);
           return;
         }
+        elseif($type == 'sectionstate')
+        {
+        	atkimport("atk.session.atkstate");        	
+        	atkState::set(array("nodetype"=>$this->m_node->atknodetype(),"section"=>$this->m_postvars['atksectionname']),$this->m_postvars['atksectionstate']);
+        	die();
+        }
       }
       
       // we could get here because of a reject.
