@@ -317,6 +317,8 @@ Changed in ATK 5.7
   url which will be filled according to the selected records and 
   atktargetvartpl is the template which is used to fill the atktargetvar.
   [Lineke]
++ Adding atkState class to store a value as a cookie or in the session.
+  [Yury, Peter, Dennis]
 * Refactored some functionality from atkSecurityManager to the
   auth_interface class which allows for greater control from within
   authorization classes. [Peter]
